--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.kanyideveloper.joomia"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0.0"
 
@@ -40,7 +40,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -63,6 +63,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.room:room-ktx:2.4.2"
+//    implementation 'androidx.core:core-ktx:+'
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -76,7 +77,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.activity:activity-compose:1.6.0-alpha03"
+//    implementation "androidx.activity:activity-compose:1.6.0-alpha03"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
@@ -86,9 +87,9 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
 
     // Hilt for DI
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-compiler:2.38.1"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-beta01'
     // Navigation made easier
@@ -124,4 +125,9 @@ dependencies {
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+//    // Snowplow Android Tracker
+    implementation 'com.snowplowanalytics:snowplow-android-tracker:5.+'
+//    // In case 'lifecycleAutotracking' is enabled
+//    implementation 'androidx.lifecycle-extensions:2.2.+'
 }
